# FireDataLoader

./: .envrc  .gitignore  README.md  check.ipynb  main.py  playground.ipynb  plot_channels.py  plot_data.py  pyproject.toml  requirements.txt  schemas.py  test_coordinates.py
old/: Download_urban.ipynb  building_height.txt  check.ipynb  playground.ipynb  urban_lai_from_tc.txt  visualize.py
