[project]
name = "firedataloader"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "affine>=2.4.0",
    "earthengine-api>=1.7.4",
    "geemap>=0.36.6",
    "geopandas[all]>=1.1.1",
    "herbie-data[extras]>=2025.12.0",
    "rasterio>=1.4.3",
    "rioxarray>=0.20.0",
    "scipy>=1.16.3",
    "scipy-stubs>=1.16.3.3",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pandas-stubs>=2.3.3.251201",
    "types-shapely>=2.1.0.20250917",
    "types-tqdm>=4.67.0.20250809",
]
